; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_nfs4idmap.c_nfs_idmap_instantiate.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_nfs4idmap.c_nfs_idmap_instantiate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.key = type { i32 }

@id_resolver_cache = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.key*, %struct.key*, i8*, i64)* @nfs_idmap_instantiate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nfs_idmap_instantiate(%struct.key* %0, %struct.key* %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.key*, align 8
  %6 = alloca %struct.key*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store %struct.key* %0, %struct.key** %5, align 8
  store %struct.key* %1, %struct.key** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load %struct.key*, %struct.key** %5, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = load i64, i64* %8, align 8
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @id_resolver_cache, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.key*, %struct.key** %6, align 8
  %16 = call i32 @key_instantiate_and_link(%struct.key* %9, i8* %10, i64 %11, i32 %14, %struct.key* %15)
  ret i32 %16
}

declare dso_local i32 @key_instantiate_and_link(%struct.key*, i8*, i64, i32, %struct.key*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
